<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">KitchenDIY</string>
    <string name="btn_escolher_ingredientes">Escolher os Ingredientes</string>
    <string name="btn_ver_receitas">Ver Receitas</string>
    <string name="btn_informacoes">Informações</string>
    <string name="btn_recomendar_ingrediente">Recomendar Ingrediente</string>
    <string name="btn_recomendar_receita">Recomendar Receita</string>
    <string name="btn_alterar_linguagem">Alterar Linguagem</string>
    <string name="btn_ver_todas_as_receitas">Ver Todas as Receitas</string>
    <string name="btn_ver_receitas_por_cozinha">Ver Receitas por Cozinha</string>
    <string name="txt_Sugestoes">Sugestôes</string>
    <string name="btn_inicio">"Início"</string>

    <string-array name="array_ingredientes">
        <item>Batatas</item>
        <item>Arroz</item>
        <item>Massa</item>
        <item>Lentilhas</item>
        <item>Massa de Tomate</item>
        <item>Ovo</item>
        <item>Salsichas</item>
        <item>Carne Picada</item>
        <item>Atum</item>
        <item>Natas</item>
        <item>Favas</item>
        <item>Queijo</item>
    </string-array>

    <string-array name="array_receitas">
        <item>Arroz Doce</item>
        <item>Empadão de arroz com frango</item>
        <item>Bolonhesa de Lentilhas</item>
        <item>Esparguete à bolonhesa</item>
        <item>Macarrão com salsicha em 5 minutos</item>
        <item>Batatas à espanhola</item>
        <item>Creme de Cogumelos e Legumes</item>
        <item>Pão com Chouriço</item>




    </string-array>
</resources>